Creacion def ver_inventario y buscar_producto

--- a/evaluacion_final_modulo1.ipynb
+++ b/evaluacion_final_modulo1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "id": "9308e303",
    "metadata": {},
    "outputs": [],
@@ -23,20 +23,36 @@
     "    \n",
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
     "        ropa = []\n",
-    "        for i in self.inventario: #recorre la lista del inventario, cada elemento de la lista a su vez es un diccionario\n",
-    "            ropa.append(i['nombre'])\n",
-    "            if nombre == i['nombre']: # verifica si coincide el nombre del nuevo producto con uno del inventario, donde i es el diccionario\n",
-    "                i['cantidad'] += cantidad # si existe, actualiza el inventario y añade la \"cantidad\"\n",
-    "                print(f'El producto \"{nombre}\" ya existe y se ha actualizado la cantidad en el inventario a {i['cantidad']} unidad(es).')\n",
+    "        for p in self.inventario: #recorre la lista del inventario, cada elemento de la lista a su vez es un diccionario.\n",
+    "            ropa.append(p['nombre']) # añadir a la lista \"ROPA\" los diferentes productos del inventario.\n",
+    "            if nombre == p['nombre']: # verifica si coincide el nombre del nuevo producto con uno del inventario, donde p es el diccionario\n",
+    "                p['cantidad'] += cantidad # si existe, actualiza el inventario y añade la \"cantidad\".\n",
+    "                print(f'El producto \"{nombre}\" ya existe y se ha actualizado la cantidad en el inventario a {p['cantidad']} unidad(es).')\n",
     "\n",
-    "        if nombre not in ropa:\n",
-    "            self.inventario.append({'nombre': nombre, 'precio': precio, 'cantidad': cantidad})\n",
-    "            print(f'El producto \"{nombre}\" ha sido añadido al inventario con un precio de ${precio} y una cantidad de {cantidad} unidad(es).')\n"
+    "        if nombre not in ropa: # si el nombre NO se encuentra en la lista ropa entonces se añade al inventario\n",
+    "            self.inventario.append({'nombre': nombre, 'precio': precio, 'cantidad': cantidad}) \n",
+    "            print(f'El producto \"{nombre}\" ha sido añadido al inventario con un precio de ${precio} y una cantidad de {cantidad} unidad(es).')\n",
+    "\n",
+    "    def ver_inventario(self): \n",
+    "        for p in self.inventario:\n",
+    "            print(f'Nombre: {p['nombre']}, Precio: ${p['precio']}, Cantidad: {p['cantidad']}.')\n",
+    "\n",
+    "    def buscar_producto(self, nombre): \n",
+    "        existe_prod = False # se crea una variable de tipo boleano para comprobar si el producto existe en el inventario. Por defecto se inicializa a False dándose por hecho que no existe inicialmente.\n",
+    "        for p in self.inventario:\n",
+    "            if nombre == p['nombre']:\n",
+    "                print(f'Nombre: {p['nombre']}, Precio: ${p['precio']}, Cantidad: {p['cantidad']}.')\n",
+    "                existe_prod = True # se cambia la variable a True porque el producto se encuetra en el inventario. \n",
+    "                break # se para cuando encuentra el producto en el inventario para que no siga iterando. \n",
+    "\n",
+    "        if not existe_prod: # se comprueba que el producto no está en el inventario y se indica en un mensaje. \n",
+    "           print(f'Producto \"{nombre}\" no ha sido encontrado.')\n",
+    "                \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 49,
    "id": "76f17d47",
    "metadata": {},
    "outputs": [],
@@ -46,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 50,
    "id": "429627ad",
    "metadata": {},
    "outputs": [
@@ -64,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 51,
    "id": "dab3ae94",
    "metadata": {},
    "outputs": [
@@ -82,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 52,
    "id": "7d6f62ca",
    "metadata": {},
    "outputs": [
@@ -96,6 +112,99 @@
    ],
    "source": [
     "mi_tienda.agregar_producto('Pantalon', 15, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "0ed48a58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Camisa, Precio: $20, Cantidad: 40.\n",
+      "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4d9bb512",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto \"Chaqueta\" ha sido añadido al inventario con un precio de $50 y una cantidad de 10 unidad(es).\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.agregar_producto('Chaqueta', 50, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "aaa87773",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Camisa, Precio: $20, Cantidad: 40.\n",
+      "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n",
+      "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "d9865af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Producto \"Falda\" no ha sido encontrado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto('Falda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "25a29e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.buscar_producto('Chaqueta')"
    ]
   },
   {
