Creacion de funciones en sucio

--- a/evaluacion_final_modulo1.ipynb
+++ b/evaluacion_final_modulo1.ipynb
@@ -386,6 +386,39 @@
    "source": [
     "inventario"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "ea2467c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "te pillé. por favor, inserte una cantidad numérica\n",
+      "te pillé. por favor, inserte una cantidad numérica\n",
+      "Has seleccionado una cantidad de 5 del producto X\n"
+     ]
+    }
+   ],
+   "source": [
+    "reintentar = False\n",
+    "#cantidad_producto=0\n",
+    "while True:\n",
+    "    try:\n",
+    "        if reintentar:\n",
+    "            cantidad_producto = int(input('inserte cantidad del producto. por favor, un número, no es tan difícil'))\n",
+    "        else:\n",
+    "            cantidad_producto = int(input('inserte cantidad del producto'))    \n",
+    "    except ValueError as e:\n",
+    "        print(f'te pillé. por favor, inserte una cantidad numérica')\n",
+    "        reintentar = True\n",
+    "    else:\n",
+    "        print(f'Has seleccionado una cantidad de {cantidad_producto} del producto X')\n",
+    "        break\n"
+   ]
   }
  ],
  "metadata": {
