Creación def calcular_valor_inventario

--- a/evaluacion_final_modulo1.ipynb
+++ b/evaluacion_final_modulo1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9308e303",
    "metadata": {},
    "outputs": [],
@@ -47,12 +47,18 @@
     "\n",
     "        if not existe_prod: # se comprueba que el producto no está en el inventario y se indica en un mensaje. \n",
     "           print(f'Producto \"{nombre}\" no ha sido encontrado.')\n",
-    "                \n"
+    "    \n",
+    "    def calcular_valor_inventario(self):\n",
+    "        valor_inventario = 0\n",
+    "        for p in self.inventario:\n",
+    "            valor_inventario += p['precio'] * p['cantidad']\n",
+    "        print(f'El valor total del inventario es ${valor_inventario}.')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "76f17d47",
    "metadata": {},
    "outputs": [],
@@ -62,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "429627ad",
    "metadata": {},
    "outputs": [
@@ -80,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "id": "dab3ae94",
    "metadata": {},
    "outputs": [
@@ -98,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "7d6f62ca",
    "metadata": {},
    "outputs": [
@@ -116,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "0ed48a58",
    "metadata": {},
    "outputs": [
@@ -135,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "4d9bb512",
    "metadata": {},
    "outputs": [
@@ -153,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "id": "aaa87773",
    "metadata": {},
    "outputs": [
@@ -173,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "d9865af3",
    "metadata": {},
    "outputs": [
@@ -191,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "25a29e1e",
    "metadata": {},
    "outputs": [
@@ -205,6 +211,24 @@
    ],
    "source": [
     "mi_tienda.buscar_producto('Chaqueta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "519ce3a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor total del inventario es $2200.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.calcular_valor_inventario()"
    ]
   },
   {
