Creado def actualizar_stock y eliminar_producto

--- a/evaluacion_final_modulo1.ipynb
+++ b/evaluacion_final_modulo1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9308e303",
    "metadata": {},
    "outputs": [],
@@ -47,18 +47,47 @@
     "\n",
     "        if not existe_prod: # se comprueba que el producto no está en el inventario y se indica en un mensaje. \n",
     "           print(f'Producto \"{nombre}\" no ha sido encontrado.')\n",
-    "    \n",
+    "\n",
+    "    def actualizar_stock(self, nombre, cantidad): \n",
+    "        existe_prod = False\n",
+    "        for p in self.inventario: \n",
+    "            if nombre == p['nombre']: \n",
+    "                p['cantidad'] += cantidad\n",
+    "                print(f'El producto \"{nombre}\" ha sido actualizado. Su stock actual es de {p['cantidad']}.')\n",
+    "                existe_prod = True\n",
+    "                break\n",
+    "        \n",
+    "        if not existe_prod: \n",
+    "            print(f'El producto \"{nombre}\" no se encuentra en el inventario.')\n",
+    "\n",
+    "    def eliminar_producto(self, nombre): \n",
+    "        contador = 0 # Un contador que se inicia en 0 para saber la posición en la lista en cada iteración para que cuando encontremos el producto a eliminar tengamos su posición.  \n",
+    "        encontrar = False # Una variable buleana para que \n",
+    "        \n",
+    "        for p in self.inventario: \n",
+    "            if nombre == p['nombre']:\n",
+    "                self.inventario.pop(contador) \n",
+    "                encontrar = True\n",
+    "                print(f'El producto \"{nombre}\" ha sido eliminado correctamente.')\n",
+    "                break\n",
+    "            contador +=1\n",
+    "        \n",
+    "        if not encontrar:\n",
+    "            print(f'No ha sido encontrado el producto \"{nombre}\".')\n",
+    "            \n",
     "    def calcular_valor_inventario(self):\n",
     "        valor_inventario = 0\n",
     "        for p in self.inventario:\n",
     "            valor_inventario += p['precio'] * p['cantidad']\n",
     "        print(f'El valor total del inventario es ${valor_inventario}.')\n",
-    "\n"
+    "\n",
+    "    # CONTINUAR POR AQUÍ\n",
+    "    #def realizar_compra():"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 176,
    "id": "76f17d47",
    "metadata": {},
    "outputs": [],
@@ -68,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 177,
    "id": "429627ad",
    "metadata": {},
    "outputs": [
@@ -86,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 178,
    "id": "dab3ae94",
    "metadata": {},
    "outputs": [
@@ -104,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 179,
    "id": "7d6f62ca",
    "metadata": {},
    "outputs": [
@@ -122,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 180,
    "id": "0ed48a58",
    "metadata": {},
    "outputs": [
@@ -141,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 181,
    "id": "4d9bb512",
    "metadata": {},
    "outputs": [
@@ -159,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 182,
    "id": "aaa87773",
    "metadata": {},
    "outputs": [
@@ -179,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 183,
    "id": "d9865af3",
    "metadata": {},
    "outputs": [
@@ -197,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 184,
    "id": "25a29e1e",
    "metadata": {},
    "outputs": [
@@ -215,8 +244,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 185,
+   "id": "38027c4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto \"Camisa\" ha sido actualizado. Su stock actual es de 80.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock('Camisa', 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "bf1f8117",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto \"Falda\" no se encuentra en el inventario.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock('Falda', 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "032a1863",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Camisa, Precio: $20, Cantidad: 80.\n",
+      "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n",
+      "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "677144bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No ha sido encontrado el producto \"Vestido\".\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.eliminar_producto('Vestido')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "1389c8e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto \"Pantalon\" ha sido eliminado correctamente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.eliminar_producto('Pantalon')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "id": "519ce3a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor total del inventario es $2100.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.calcular_valor_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "e4daa47e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto \"Chaqueta piel\" ha sido añadido al inventario con un precio de $100 y una cantidad de 1 unidad(es).\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.agregar_producto('Chaqueta piel', 100, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "56ec68b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Camisa, Precio: $20, Cantidad: 80.\n",
+      "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n",
+      "Nombre: Chaqueta piel, Precio: $100, Cantidad: 1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "aea82e17",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 170,
    "id": "8cc1e1ba",
    "metadata": {},
    "outputs": [],
@@ -258,7 +435,186 @@
     "clientes = {}\n",
     "ventas_totales = 0\n",
     "inventario.append({'nombre': 'Camisa', 'precio': 20, 'cantidad': 40})\n",
-    "inventario.append({'nombre': 'Pantalon', 'precio': 25, 'cantidad': 50})"
+    "inventario.append({'nombre': 'Pantalon', 'precio': 25, 'cantidad': 50})\n",
+    "inventario.append({'nombre': 'Falda', 'precio': 25, 'cantidad': 50})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "d43957ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'nombre': 'Camisa', 'precio': 20, 'cantidad': 40},\n",
+       " {'nombre': 'Pantalon', 'precio': 25, 'cantidad': 50},\n",
+       " {'nombre': 'Falda', 'precio': 25, 'cantidad': 50}]"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inventario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "e08b4224",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(inventario) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df1d534b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: {'nombre': 'Camisa', 'precio': 20, 'cantidad': 40}\n",
+      "1: {'nombre': 'Pantalon1', 'precio': 25, 'cantidad': 50}\n",
+      "2: {'nombre': 'Falda1', 'precio': 25, 'cantidad': 50}\n",
+      "3: {'nombre': 'Pantalon2', 'precio': 25, 'cantidad': 50}\n",
+      "4: {'nombre': 'Falda2', 'precio': 25, 'cantidad': 50}\n",
+      "5: {'nombre': 'Pantalon3', 'precio': 25, 'cantidad': 50}\n",
+      "6: {'nombre': 'Falda3', 'precio': 25, 'cantidad': 50}\n",
+      "7: {'nombre': 'Pantalon4', 'precio': 25, 'cantidad': 50}\n",
+      "8: {'nombre': 'Falda4', 'precio': 25, 'cantidad': 50}\n",
+      "9: {'nombre': 'Pantalon5', 'precio': 25, 'cantidad': 50}\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = 'Falda11'\n",
+    "contador = 0\n",
+    "\n",
+    "for p in inventario:    \n",
+    "    print(f'{contador}: {p}') \n",
+    "    if nombre == p['nombre']: \n",
+    "        print(f'Encontrado: {p} y su contador es {contador}')\n",
+    "        inventario.pop(contador)\n",
+    "        break\n",
+    "    contador +=1\n",
+    "\n",
+    "if  contador == len(inventario):\n",
+    "    print(f'No ha sido encontrado {nombre}') \n",
+    "\n",
+    "\n",
+    "     \n",
+    "\n",
+    "# print(f'No ha sido encontrado {nombre}')   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7eeac8e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: {'nombre': 'Camisa', 'precio': 20, 'cantidad': 40}\n",
+      "1: {'nombre': 'Pantalon', 'precio': 25, 'cantidad': 50}\n",
+      "Encontrado: {'nombre': 'Pantalon', 'precio': 25, 'cantidad': 50} y su contador es 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = 'Pantalon'\n",
+    "contador = 0\n",
+    "encontrar = False\n",
+    "\n",
+    "for p in inventario:    \n",
+    "    # print(f'{contador}: {p}')     \n",
+    "    if nombre == p['nombre']: \n",
+    "        print(f'Encontrado: {p} y su contador es {contador}')\n",
+    "        inventario.pop(contador)\n",
+    "        encontrar = True\n",
+    "        break\n",
+    "    contador +=1\n",
+    "\n",
+    "if  not encontrar:\n",
+    "    print(f'No ha sido encontrado {nombre}') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "73f6285f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'nombre': 'Camisa', 'precio': 20, 'cantidad': 40},\n",
+       " {'nombre': 'Falda', 'precio': 25, 'cantidad': 50}]"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inventario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "3ce28a23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: {'nombre': 'Camisa', 'precio': 20, 'cantidad': 40}\n",
+      "1: {'nombre': 'Pantalon', 'precio': 25, 'cantidad': 50}\n",
+      "2: {'nombre': 'Falda', 'precio': 25, 'cantidad': 50}\n",
+      "Encontrado: {'nombre': 'Falda', 'precio': 25, 'cantidad': 50} y su contador es 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = 'Falda'\n",
+    "contador = 0\n",
+    "tamaño_inicial_inventario = len(inventario)\n",
+    "\n",
+    "for p in inventario:    \n",
+    "    print(f'{contador}: {p}') \n",
+    "    if nombre == p['nombre']: \n",
+    "        print(f'Encontrado: {p} y su contador es {contador}')\n",
+    "        inventario.pop(contador)\n",
+    "        break\n",
+    "    contador +=1\n",
+    "\n",
+    "if  tamaño_inicial_inventario == len(inventario):\n",
+    "    print(f'No ha sido encontrado {nombre}') \n"
    ]
   },
   {
