Actualización de guardado

--- a/evaluacion_final_modulo1.ipynb
+++ b/evaluacion_final_modulo1.ipynb
@@ -81,7 +81,7 @@
     "            valor_inventario += p['precio'] * p['cantidad']\n",
     "        print(f'El valor total del inventario es ${valor_inventario}.')\n",
     "\n",
-    "    # CONTINUAR POR AQUÍ\n",
+    "    # CONTINUAR POR AQUÍ (el 7)\n",
     "    #def realizar_compra():"
    ]
   },
