--- a/evaluacion_final_modulo1.ipynb
+++ b/evaluacion_final_modulo1.ipynb
@@ -42,12 +42,14 @@
     "        for p in self.inventario:\n",
     "            if nombre == p['nombre']:\n",
     "                print(f'Nombre: {p['nombre']}, Precio: ${p['precio']}, Cantidad: {p['cantidad']}.')\n",
-    "                existe_prod = True # se cambia la variable a True porque el producto se encuetra en el inventario. \n",
+    "                existe_prod = True # se cambia la variable a True porque el producto se encuetra en el inventario.\n",
     "                break # se para cuando encuentra el producto en el inventario para que no siga iterando. \n",
     "\n",
     "        if not existe_prod: # se comprueba que el producto no está en el inventario y se indica en un mensaje. \n",
     "           print(f'Producto \"{nombre}\" no ha sido encontrado.')\n",
-    "\n",
+    "        \n",
+    "        return existe_prod # Devuelve: True si existe el producto y False si no existe. (Para def realizar_compra) \n",
+    "        \n",
     "    def actualizar_stock(self, nombre, cantidad): \n",
     "        existe_prod = False\n",
     "        for p in self.inventario: \n",
@@ -81,13 +83,47 @@
     "            valor_inventario += p['precio'] * p['cantidad']\n",
     "        print(f'El valor total del inventario es ${valor_inventario}.')\n",
     "\n",
-    "    # CONTINUAR POR AQUÍ (el 7)\n",
-    "    #def realizar_compra():"
+    "\n",
+    "    def realizar_compra(self):\n",
+    "        compra = True\n",
+    "        lista_compra = []\n",
+    "        total = 0\n",
+    "            \n",
+    "        while compra == True: \n",
+    "            print('Productos del inventario:')\n",
+    "            self.ver_inventario()\n",
+    "            selec_producto = input('Seleccione un producto:')\n",
+    "        \n",
+    "            existe_producto = self.buscar_producto(selec_producto)\n",
+    "            if not existe_producto:\n",
+    "                continue\n",
+    "\n",
+    "            for p in self.inventario:\n",
+    "                if selec_producto == p['nombre']: \n",
+    "                    total += p['precio']\n",
+    "                    \n",
+    "            lista_compra.append(selec_producto)\n",
+    "            self.actualizar_stock(selec_producto, -1)\n",
+    "            seguir_comprando = input('¿Desea seguir comprando? Indique con un Sí o con un No.')\n",
+    "\n",
+    "            if seguir_comprando == 'Sí': \n",
+    "                compra = True\n",
+    "\n",
+    "            elif seguir_comprando == 'No': \n",
+    "                print(f'El carrito con sus producto es el siguiente: {lista_compra}.')\n",
+    "                print(f'El coste total de su compra es de {total}')\n",
+    "                compra = False\n",
+    "\n",
+    "            else: \n",
+    "                print('RESPUESTA NO VALIDA.')\n",
+    "                print(f'El carrito con sus producto es el siguiente: {lista_compra}.')\n",
+    "                print(f'El coste total de su compra es de {total}')\n",
+    "                compra = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 129,
    "id": "76f17d47",
    "metadata": {},
    "outputs": [],
@@ -97,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 130,
    "id": "429627ad",
    "metadata": {},
    "outputs": [
@@ -105,17 +141,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El producto \"Camisa\" ha sido añadido al inventario con un precio de $20 y una cantidad de 40 unidad(es).\n"
+      "El producto \"Camisa\" ha sido añadido al inventario con un precio de $2 y una cantidad de 20 unidad(es).\n"
      ]
     }
    ],
    "source": [
-    "mi_tienda.agregar_producto('Camisa', 20, 40)\n"
+    "mi_tienda.agregar_producto('Camisa', 2, 20)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 114,
    "id": "dab3ae94",
    "metadata": {},
    "outputs": [
@@ -133,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 95,
    "id": "7d6f62ca",
    "metadata": {},
    "outputs": [
@@ -151,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 96,
    "id": "0ed48a58",
    "metadata": {},
    "outputs": [
@@ -170,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 97,
    "id": "4d9bb512",
    "metadata": {},
    "outputs": [
@@ -188,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 98,
    "id": "aaa87773",
    "metadata": {},
    "outputs": [
@@ -208,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 99,
    "id": "d9865af3",
    "metadata": {},
    "outputs": [
@@ -218,6 +254,16 @@
      "text": [
       "Producto \"Falda\" no ha sido encontrado.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -226,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 100,
    "id": "25a29e1e",
    "metadata": {},
    "outputs": [
@@ -236,6 +282,16 @@
      "text": [
       "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -244,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 101,
    "id": "38027c4c",
    "metadata": {},
    "outputs": [
@@ -262,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 102,
    "id": "bf1f8117",
    "metadata": {},
    "outputs": [
@@ -280,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 103,
    "id": "032a1863",
    "metadata": {},
    "outputs": [
@@ -300,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 104,
    "id": "677144bd",
    "metadata": {},
    "outputs": [
@@ -318,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 105,
    "id": "1389c8e9",
    "metadata": {},
    "outputs": [
@@ -336,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 106,
    "id": "519ce3a4",
    "metadata": {},
    "outputs": [
@@ -354,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 107,
    "id": "e4daa47e",
    "metadata": {},
    "outputs": [
@@ -372,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 108,
    "id": "56ec68b5",
    "metadata": {},
    "outputs": [
@@ -392,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 109,
    "id": "aea82e17",
    "metadata": {},
    "outputs": [
@@ -407,6 +463,37 @@
    "source": [
     "mi_tienda.calcular_valor_inventario()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "f2148ccc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Productos del inventario:\n",
+      "Nombre: Camisa, Precio: $2, Cantidad: -2.\n",
+      "Nombre: Camisa, Precio: $2, Cantidad: -2.\n",
+      "El producto \"Camisa\" ha sido actualizado. Su stock actual es de -3.\n",
+      "El carrito con sus producto es el siguiente: ['Camisa'].\n",
+      "El coste total de su compra es de 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.realizar_compra()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2902078",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -426,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 36,
    "id": "8cc1e1ba",
    "metadata": {},
    "outputs": [],
@@ -437,6 +524,136 @@
     "inventario.append({'nombre': 'Camisa', 'precio': 20, 'cantidad': 40})\n",
     "inventario.append({'nombre': 'Pantalon', 'precio': 25, 'cantidad': 50})\n",
     "inventario.append({'nombre': 'Falda', 'precio': 25, 'cantidad': 50})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8895e5fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'nombre': 'Camisa', 'precio': 20, 'cantidad': 40},\n",
+       " {'nombre': 'Pantalon', 'precio': 25, 'cantidad': 50},\n",
+       " {'nombre': 'Falda', 'precio': 25, 'cantidad': 50}]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inventario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e79c7361",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "producto = []\n",
+    "\n",
+    "for p in inventario: \n",
+    "    producto.append(p['nombre'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a88ceb9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Camisa', 'Pantalon', 'Falda']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "producto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f002feb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selec_producto = input(f'Seleccione cual de los siguientes productos desea comprar: {producto}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e393b84c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Falda'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selec_producto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d5406a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "for p in inventario: \n",
+    "    if selec_producto == p['nombre']:\n",
+    "        lista.append(p['precio'])\n",
+    "        print(lista)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "51855d59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 25, 25, 25, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if selec_producto == p['nombre']:\n",
+    "    lista.append(p['precio'])\n",
+    "    print(lista)"
    ]
   },
   {
